# ratelimiter

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  deployment-test.md  docker-compose.dev.yml  docker-compose.prod-nginx.yml  docker-compose.prod.yml  nginx.conf  pyproject.toml
.github/workflows/: main.yml
docs/: COMPLETE_SETUP_GUIDE.md  EC2_SETUP.md  GITHUB_SETUP.md  SECURITY_IMPROVEMENTS.md  aws_setup.md
logs_39046146618/: 0_test.txt  1_build.txt  2_deploy.txt
logs_39046146618/deploy/: 15_Post Configure AWS CLI.txt  16_Post Checkout code.txt  17_Complete job.txt  1_Set up job.txt  2_Checkout code.txt  3_Configure AWS CLI.txt  4_Get GitHub Actions Runner IP and Update Security Group.txt  5_Configure SSH.txt  6_Deploy to EC2.txt  7_Cleanup Security Group Rule.txt  8_Notify deployment status.txt
logs_39046146618/test/: 10_Run high-frequency performance tests (analytical only).txt  11_Run Redis async tests (analytical only).txt  12_Run visualization tests (analytical only).txt  13_Upload test results.txt  14_Upload coverage to Codecov.txt  1_Set up job.txt  24_Post Cache Poetry dependencies.txt  25_Post Cache Poetry installation.txt  26_Post Set up Python.txt  27_Post Checkout code.txt  28_Stop containers.txt  29_Complete job.txt  2_Initialize containers.txt  3_Checkout code.txt  4_Set up Python.txt  5_Cache Poetry installation.txt  (+4 more)
scripts/: quick-setup.sh
tests/: test_geoip_enrichment.py  test_main.py  test_rate_limiter.py  test_rate_limiter_async.py  test_redis_connection.py  test_redis_debug.py  test_visualization.py  test_weather_request.py
(+10 files in other folders)
